--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/primary_background"
-    tools:context=".Activity.AboutActivity">
+    tools:context=".Activity.AboutActivity"
+    android:theme="@style/Theme.UI_for_all_activity"
+    >
 
 
 
