--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1E1F1F">
+    android:background="#1E1F1F"
+    android:fitsSystemWindows="true"
+    android:theme="@style/Theme.UI_for_all_activity">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -78,7 +80,10 @@
                         android:inputType="numberPassword"
                         android:textColor="@color/limeclr"
                         android:textColorHint="@color/limeclr"
-                        android:textSize="29sp" />
+                        android:textSize="29sp"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        />
 
 
                 </LinearLayout>
@@ -100,7 +105,9 @@
                         android:inputType="numberPassword"
                         android:textColor="@color/limeclr"
                         android:textColorHint="@color/limeclr"
-                        android:textSize="29sp" />
+                        android:textSize="29sp"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
 
 
                 </LinearLayout>
@@ -122,7 +129,9 @@
                         android:inputType="numberPassword"
                         android:textColor="@color/limeclr"
                         android:textColorHint="@color/limeclr"
-                        android:textSize="30sp" />
+                        android:textSize="30sp"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
 
 
                 </LinearLayout>
@@ -144,7 +153,9 @@
                         android:inputType="numberPassword"
                         android:textColor="@color/limeclr"
                         android:textColorHint="@color/limeclr"
-                        android:textSize="29sp" />
+                        android:textSize="29sp"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -207,7 +218,9 @@
                 android:textAlignment="textEnd"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:textSize="60sp" />
+                android:textSize="60sp"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
 
             <ScrollView
                 android:id="@+id/scroll_2"
@@ -228,7 +241,10 @@
                     android:textAlignment="textEnd"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="40sp" />
+                    android:textSize="40sp"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"/>
+
             </ScrollView>
 
         </RelativeLayout>
