--- a/app/src/main/res/layout/activity_final_file.xml
+++ b/app/src/main/res/layout/activity_final_file.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:theme="@style/Theme.status_bar_clr"
+    android:theme="@style/Theme.UI_for_all_activity"
     android:background="@drawable/primary_background"
     tools:context=".Activity.FinalFileActivity">
 
