--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/primary_background"
+    android:theme="@style/Theme.UI_for_all_activity"
     android:orientation="vertical">
 
 
@@ -35,9 +36,10 @@
 
         <ImageView
             android:id="@+id/new_main_setting"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:padding="5dp"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:padding="6dp"
+            android:layout_marginEnd="2dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="16dp"
             android:background="@drawable/ripple_back"
