--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -67,18 +67,55 @@
             android:layout_alignParentStart="true"/>
 
         <!-- EditText for Notes -->
-        <EditText
-            android:id="@+id/notesEditText"
+<!--        <EditText-->
+<!--            android:id="@+id/notesEditText"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:hint="Start typing"-->
+<!--            android:textColorHint="#808080"-->
+<!--            android:textColor="#ffffff"-->
+<!--            android:background="@null"-->
+<!--            android:layout_below="@id/timestampTextView"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:inputType="textMultiLine"-->
+<!--            android:gravity="top|start"-->
+<!--            android:overScrollMode="always"-->
+<!--            android:scrollbars="vertical"-->
+<!--            android:scrollHorizontally="false"-->
+<!--            android:fadeScrollbars="false"/>-->
+
+
+
+        <ScrollView
+            android:id="@+id/notesScrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Start typing"
-            android:textColorHint="#808080"
-            android:textColor="#ffffff"
-            android:background="@null"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
             android:layout_below="@id/timestampTextView"
-            android:layout_marginTop="10dp"
-            android:inputType="textMultiLine"
-            android:minLines="3"/>
+            android:layout_marginTop="10dp">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <!-- Keep your Title, Timestamp, EditText here -->
+
+                <EditText
+                    android:id="@+id/notesEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="200dp"
+                    android:hint="Start typing"
+                    android:inputType="textMultiLine"
+                    android:gravity="top|start"
+                    android:background="@null"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#808080"/>
+
+            </LinearLayout>
+        </ScrollView>
 
 
 
