--- a/app/src/main/res/layout/activity_recycle_bin.xml
+++ b/app/src/main/res/layout/activity_recycle_bin.xml
@@ -34,6 +34,35 @@
         android:paddingBottom="70dp"
         />
 
+    <RelativeLayout
+        android:id="@+id/recycle_no_file_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/recycle_custom_toolbar_container"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        android:layout_marginTop="75dp"
+        android:clipToPadding="false">
+
+        <ImageView
+            android:id="@+id/imagehidden_no_file"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/empty_box" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No File Click + to add file"
+            android:textColor="#9ab1ce"
+            android:textSize="16sp"
+            android:layout_below="@+id/imagehidden_no_file"
+            android:layout_marginTop="10dp"/>
+
+
+    </RelativeLayout>
 
     <include layout="@layout/custom_bottom_appbar"
         android:id="@+id/recycle_custom_bottom_appbar"
