--- a/app/src/main/res/layout/activity_video_hidden.xml
+++ b/app/src/main/res/layout/activity_video_hidden.xml
@@ -34,6 +34,15 @@
         android:paddingBottom="70dp"
         />
 
+    <ProgressBar
+        android:id="@+id/video_loading_progress_bar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
 
     <RelativeLayout
         android:id="@+id/video_no_file_icon"
